[gd_scene load_steps=3 format=2]

[ext_resource path="res://TouchInputDetector.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 20 )

[node name="TouchInputDetector" type="Node2D"]
script = ExtResource( 1 )

[node name="LongPressTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="TouchInputArea" type="TouchScreenButton" parent="."]
scale = Vector2( 3, 3 )
shape = SubResource( 1 )
[connection signal="timeout" from="LongPressTimer" to="." method="_on_LongPressTimer_timeout"]
[connection signal="pressed" from="TouchInputArea" to="." method="_on_TouchInputArea_pressed"]
[connection signal="released" from="TouchInputArea" to="." method="_on_TouchInputArea_released"]
